--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "expo": "~51.0.24",
     "expo-status-bar": "~1.12.1",
+    "native-base": "^2.15.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.3",
